--- a/carrito.html
+++ b/carrito.html
@@ -18,7 +18,7 @@
                 <div class="nav flex-column">
                     <div>
                         <div id="MyClockDisplay" class="clock" onload="showTime()"></div>
-                        <input type="button" onclick="show_alert()" value="¡Hola, " />
+                        <div id="saludoUsuario"></div>
                     </div>
 
                     <ul>
