--- a/home.html
+++ b/home.html
@@ -21,14 +21,14 @@
                         <div id="saludoUsuario"></div>
                     </div>
 
-                    <ul>
+                    <div>
                         <li>
                             <a class="nav-link" href="#">Home</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="./carrito.html">🛒Carrito</a>
                         </li>
-                    </ul>
+                   
                 </div>
             </nav>
         </header>
@@ -43,12 +43,23 @@
             </p>
         </main>
 
-        <section class="asideCarrito col">
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Facilis unde placeat eaque officiis nam
-                corporis maiores ea totam omnis? Illum neque voluptatum laboriosam accusamus et ad? Iusto molestiae
-                ratione temporibus.</p>
-        </section>
-    </div>
+        <aside class="asideCarrito col m-3">
+            <div class="medium-4  columns">
+                <div class="cart">
+                    <h1>Productos en tu Carrito</h1>
+                    <div class="row">
+                        <div class="medium-6 columns">
+                            <button class="tiny secondary" id="clear">Vaciar</button>
+                        </div>
+                        <div class="medium-6 columns">
+                            <button class="tiny disabled" title="chekout">Finalizar</button>
+                        </div>
+                    </div>
+                    <div id="cartItems">Revisando Carrito...</div>
+                    Total de Productos: <strong id="totalProductos">0</strong>
+                </div>
+            </div>
+        </aside>
 
     <!--  JavaScript -->
     <script src="./estilos/code.js"></script>
