--- a/home.html
+++ b/home.html
@@ -21,15 +21,14 @@
                         <div id="saludoUsuario"></div>
                     </div>
 
-                    <div>
-                        <li>
+                    <ul>
+                        <div>
                             <a class="nav-link" href="#">Home</a>
-                        </li>
-                        <li class="nav-item">
+                        </div>
+                        <div class="nav-item">
                             <a class="nav-link" href="./carrito.html">🛒Carrito</a>
-                        </li>
-                   
-                </div>
+                        </div>
+                    </ul>
             </nav>
         </header>
 
@@ -47,6 +46,10 @@
             <div class="medium-4  columns">
                 <div class="cart">
                     <h1>Productos en tu Carrito</h1>
+                    <div class="content">
+                        <ul id="list">
+                        </ul>
+                    </div>
                     <div class="row">
                         <div class="medium-6 columns">
                             <button class="tiny secondary" id="clear">Vaciar</button>
@@ -55,23 +58,23 @@
                             <button class="tiny disabled" title="chekout">Finalizar</button>
                         </div>
                     </div>
-                    <div id="cartItems">Revisando Carrito...</div>
-                    Total de Productos: <strong id="totalProductos">0</strong>
+
+                    <p> Total de Productos: <strong id="totalProductos">0</strong></p>
                 </div>
             </div>
         </aside>
 
-    <!--  JavaScript -->
-    <script src="./estilos/code.js"></script>
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
-    </script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js"
-        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous">
-    </script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js"
-        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
-    </script>
+        <!--  JavaScript -->
+        <script src="./estilos/code.js"></script>
+        <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+            integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
+        </script>
+        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js"
+            integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous">
+        </script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js"
+            integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
+        </script>
 </body>
 
 </html>
