--- a/home.html
+++ b/home.html
@@ -12,69 +12,49 @@
 </head>
 
 <body class="container">
-    <div class="container-all row">
-        <header class="col">
+    <div class="container-all row centro">
+        <header class="col-2 navegacion medio">
             <nav class="navbar navbar-light bg-light">
                 <div class="nav flex-column">
-                    <div>
-                        <div id="MyClockDisplay" class="clock" onload="showTime()"></div>
-                        <div id="saludoUsuario"></div>
-                    </div>
-
                     <ul>
-                        <div>
+                        <li>
                             <a class="nav-link" href="#">Home</a>
-                        </div>
-                        <div class="nav-item">
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link" href="./carrito.html">🛒Carrito</a>
-                        </div>
+                        </li>
                     </ul>
             </nav>
         </header>
 
-        <main class="col-6">
-            <h1>
+        <main class="col-5 medio listadecompras">
+            <h2>
                 🛒Tu Lista
-            </h1>
-            <h2>Tu lista de bolsillo al alcance de la mano</h2>
-            <p>
-                Crea tu lista de compras y llevá la cuenta de tus pedidos.
-            </p>
+            </h2>
+            <h3>Una <span>renovada</span> lista de compras</h3>
+            <p>Organizá tu lista de compras, para tenerla siempre <span>a mano</span></p>
+
         </main>
 
-        <aside class="asideCarrito col m-3">
-            <div class="medium-4  columns">
-                <div class="cart">
-                    <h1>Productos en tu Carrito</h1>
-                    <div class="content">
-                        <ul id="list">
-                        </ul>
-                    </div>
-                    <div class="row">
-                        <div class="medium-6 columns">
-                            <button class="tiny secondary" id="clear">Vaciar</button>
-                        </div>
-                        <div class="medium-6 columns">
-                            <button class="tiny disabled" title="chekout">Finalizar</button>
-                        </div>
-                    </div>
-
-                    <p> Total de Productos: <strong id="totalProductos">0</strong></p>
-                </div>
-            </div>
-        </aside>
-
-        <!--  JavaScript -->
-        <script src="./estilos/code.js"></script>
-        <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-            integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
-        </script>
-        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js"
-            integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous">
-        </script>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js"
-            integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
-        </script>
+        <section class="col-4 medio">
+            <form action="./carrito.html" onsubmit="llamarSaludo()">
+                <h4>¡Hola! empecemos, ¿Cual es su nombre?</h4>
+                <input id="pedidaNombre" type="text">
+                <button type="submit" value="submit">🛒</button>
+            </form>
+        </section>
+    </div>
+    <!--  JavaScript -->
+    <script src="./estilos/code.js"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
+    </script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js"
+        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous">
+    </script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js"
+        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
+    </script>
 </body>
 
 </html>
