--- a/carrito.html
+++ b/carrito.html
@@ -7,55 +7,68 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="shortcut icon" href="./img/icon.png" type="image/x-icon">
     <link rel="stylesheet" href="./estilos/style.css">
     <title>Carrito | Tu Lista de Mercado</title>
 </head>
 
-
 <body class="container">
-    <div class="container-all row centro">
-        <header class="col-2 navegacion medio">
-            <nav class="navbar navbar-light bg-light">
+    <div>
+        <header>
                 <div class="nav flex-column">
-                    <!-- saludo usuario-->
-                    <h4 id="bienvenidaUsuario"> </h4>
-                    </form>
-                    <ul>
-                        <li>
-                            <a class="nav-link" href="./home.html">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">🛒Carrito</a>
-                        </li>
-                        </li>
-                    </ul>
+                    <a href="./home.html">
+                        <img src="./img/icon.png" alt="icono">
+                    </a>
                 </div>
-            </nav>
+                <!-- saludo usuario-->
+                <h4 id="bienvenidaUsuario"> </h4>
+                </form>
+        
         </header>
         <!-- Autocomplete buscador item-->
-        <main class="col-5 medio">
+        <main>
             <h3>Tu lista del mercado</h3>
             <div class="search">
-                <form>
-                    <input type="text" placeholder="Agregar producto...">
-                    <button class="btn-add">📝</button>
+                <form class="todo-form">
+                    <div class="form-wrapper">
+                        <input type="text" name="name" autofocus>
+                        <svg aria-hidden="true">
+                            <use xlink:href="#input"></use>
+                        </svg>
+                    </div>
+                    <div class="form-wrapper">
+                        <button type="submit">Agregar producto...📝</button>
+                        <svg>
+                            <use xlink:href="#button"></use>
+                        </svg>
+                    </div>
                 </form>
             </div>
         </main>
-        <aside class="asideCarrito col-4">
+        <aside>
             <h5>Changuito</h5>
-            <div class="ol-container">
-                <ol></ol>
-            </div>
-            <div class="empty">
-                <p>No estoy cargado... 😞 </p>
+            <div>
+                <div class="todo-stats">
+                    <div class="total-tasks">
+                        Total carrito: <span>0</span>
+                    </div>
+                    <div class="completed-tasks">
+                        Comprado: <span>0</span>
+                    </div>
+                    <div class="remaining-tasks">
+                        Falta comprar: <span>0</span>
+                    </div>
+                    <svg>
+                        <use xlink:href="#stats"></use>
+                    </svg>
+                </div>
+                <ol class="todo-list"></ol>
             </div>
         </aside>
 
     </div>
-    <!--  JavaScript -->
+    <!--  SCRIPT -->
     <script src="./estilos/code.js"></script>
-
 </body>
 
 </html>
