--- a/home.html
+++ b/home.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="shortcut icon" href="./img/icon.png" type="image/x-icon">
     <link rel="stylesheet" href="./estilos/style.css">
     <title>Tu Lista de Mercado</title>
 </head>
@@ -16,20 +17,14 @@
         <header class="col-2 navegacion medio">
             <nav class="navbar navbar-light bg-light">
                 <div class="nav flex-column">
-                    <ul>
-                        <li>
-                            <a class="nav-link" href="#">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="./carrito.html">🛒Carrito</a>
-                        </li>
-                    </ul>
+                   <img src="./img/icon.png"  alt="icono">
+                </div>     
             </nav>
         </header>
 
         <main class="col-5 medio listadecompras">
             <h2>
-                🛒Tu Lista
+                🛒
             </h2>
             <h3>Una <span>renovada</span> lista de compras</h3>
             <p>Organizá tu lista de compras, para tenerla siempre <span>a mano</span></p>
@@ -39,22 +34,14 @@
         <section class="col-4 medio">
             <form action="./carrito.html" onsubmit="llamarSaludo()">
                 <h4>¡Hola! empecemos, ¿Cual es su nombre?</h4>
-                <input id="pedidaNombre" type="text">
+                <input id="pedidaNombre" type="text" required>
                 <button type="submit" value="submit">🛒</button>
             </form>
         </section>
     </div>
-    <!--  JavaScript -->
+    <!--  SCRIPT -->
     <script src="./estilos/code.js"></script>
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
-    </script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js"
-        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous">
-    </script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js"
-        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
-    </script>
+    <!--  BBOOSTRAP -->
 </body>
 
 </html>
