--- a/carrito.html
+++ b/carrito.html
@@ -5,70 +5,54 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css"
-        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="shortcut icon" href="./img/icon.png" type="image/x-icon">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css"
+        integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link rel="stylesheet" href="./estilos/style.css">
     <title>Carrito | Tu Lista de Mercado</title>
 </head>
 
-<body class="container">
-    <div>
+<body class="container_todo">
+    <div class="container_contenido">
         <header>
-                <div class="nav flex-column">
-                    <a href="./home.html">
-                        <img src="./img/icon.png" alt="icono">
-                    </a>
-                </div>
+            <nav>
+                <a href="./home.html">
+                    <img src="./img/icon.png" alt="icono">
+                </a>
                 <!-- saludo usuario-->
                 <h4 id="bienvenidaUsuario"> </h4>
-                </form>
-        
+            </nav>
         </header>
         <!-- Autocomplete buscador item-->
         <main>
             <h3>Tu lista del mercado</h3>
             <div class="search">
-                <form class="todo-form">
-                    <div class="form-wrapper">
-                        <input type="text" name="name" autofocus>
-                        <svg aria-hidden="true">
-                            <use xlink:href="#input"></use>
-                        </svg>
-                    </div>
-                    <div class="form-wrapper">
-                        <button type="submit">Agregar producto...📝</button>
-                        <svg>
-                            <use xlink:href="#button"></use>
-                        </svg>
-                    </div>
+                <form>
+                    <input type="text" placeholder="Agregar producto...">
+                    <button class="btn-add">📝Agregar</button>
                 </form>
             </div>
         </main>
         <aside>
+
             <h5>Changuito</h5>
-            <div>
-                <div class="todo-stats">
-                    <div class="total-tasks">
-                        Total carrito: <span>0</span>
-                    </div>
-                    <div class="completed-tasks">
-                        Comprado: <span>0</span>
-                    </div>
-                    <div class="remaining-tasks">
-                        Falta comprar: <span>0</span>
-                    </div>
-                    <svg>
-                        <use xlink:href="#stats"></use>
-                    </svg>
-                </div>
-                <ol class="todo-list"></ol>
+            <div class="ol-container">
+                <ul></ul>
+            </div>
+            <div class="empty">
+                <p>No estoy cargado... 😞 </p>
             </div>
         </aside>
-
     </div>
     <!--  SCRIPT -->
     <script src="./estilos/code.js"></script>
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.3/dist/umd/popper.min.js"
+        integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous">
+    </script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/js/bootstrap.min.js"
+        integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous">
+    </script>
 </body>
 
 </html>
