--- a/carrito.html
+++ b/carrito.html
@@ -23,7 +23,7 @@
                 <h4 id="bienvenidaUsuario"> </h4>
             </nav>
         </header>
-        <!-- Autocomplete buscador item-->
+        <!-- Autocomplete buscador item
         <main>
             <h3>Tu lista del mercado</h3>
             <div class="search">
@@ -33,26 +33,71 @@
                 </form>
             </div>
         </main>
-        <aside>
+-->
+        <div class="container">
 
-            <h5>Changuito</h5>
-            <div class="ol-container">
-                <ul></ul>
+            <div>
+                <h3>Lista de Compras</h3>
+                <p>¡Arrastrá tus productos, sé libre!</p>
+                <div>
+                    <input type="text" placeholder="Agregar producto...">
+                    <button class="btn-add">📝Agregar</button>
+                </div>
+                <div id="tareas">
+                    <ul class="barraTiket">
+                        <li><span></span></li>
+                    </ul>
+                </div>
+                <div class="container">
+                    <div class="row">
+                        <div class="list-group col-6" id="tareasBebidas">
+                            <h5>Bebidas 🍺</h5>
+                            <div class="contenido-lista"></div>
+                            <div class="ol-container">
+                            </div>
+                            <div class="contenido-lista"></div>
+                        </div>
+
+                        <div class="list-group col-6" id="tareasRegaleria">
+                            <h5>Regalería 🎁</h5>
+                            <div class="contenido-lista"></div>
+                            <div class="ol-container">
+                            </div>
+                            <div class="contenido-lista"></div>
+                        </div>
+
+                        <div class="list-group col-6" id="tareasVerduras">
+                            <h5>Verduras 🍎</h5>
+                            <div class="contenido-lista"></div>
+                            <div class="ol-container">
+                            </div>
+                            <div class="contenido-lista"></div>
+                        </div>
+
+                        <div class="list-group col-6" id="tareasLimpieza">
+                            <h5>Limpieza 🧼</h5>
+                            <div class="contenido-lista"></div>
+                            <div class="ol-container">
+                            </div>
+                            <div class="contenido-lista"></div>
+                        </div>
+                    </div>
+                </div>
             </div>
-            <div class="empty">
-                <p>No estoy cargado... 😞 </p>
-            </div>
-        </aside>
+        </div>
     </div>
-    <!--  SCRIPT -->
-    <script src="./estilos/code.js"></script>
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.3/dist/umd/popper.min.js"
-        integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous">
-    </script>
+    </div>
+
+
+    <!-- jsDelivr :: Libreria :: Boostrap-->
+    <script src="https://kit.fontawesome.com/60d96370ad.js" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sortablejs@latest/Sortable.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/js/bootstrap.min.js"
         integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous">
     </script>
+    <!--  SCRIPT -->
+    <script src="./estilos/code.js"></script>
+
 </body>
 
 </html>
