--- a/home.html
+++ b/home.html
@@ -29,24 +29,20 @@
 
             <section>
                 <form action="./carrito.html" onsubmit="llamarSaludo()">
-                    <h4>¡Hola! empecemos, ¿Cual es su nombre?</h4>
-                    <input id="pedidaNombre" type="text" required>
-                    <button type="submit" value="submit">🛒Ingresar</button>
+                    <h4>¡Hola! empecemos: </h4>
+                    <input id="pedidaNombre" placeholder="Escribe tu nombre..." type="text" required>
+                    <button type="submit" value="submit" class="boton">🛒Ingresar</button>
                 </form>
             </section>
         </main>
     </div>
-    <!--  SCRIPT -->
-    <script src="./estilos/code.js"></script>
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
-    </script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.3/dist/umd/popper.min.js"
-        integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous">
-    </script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/js/bootstrap.min.js"
-        integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous">
-    </script>
+     <!-- jsDelivr :: Libreria :: Boostrap-->
+     <script src="https://cdn.jsdelivr.net/npm/sortablejs@latest/Sortable.min.js"></script>
+     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/js/bootstrap.min.js"
+         integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous">
+     </script>
+     <!--  SCRIPT -->
+     <script src="./estilos/code.js"></script>
 </body>
 
 </html>
