--- a/hello.html
+++ b/hello.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="es">
 
@@ -6,9 +5,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="shortcut icon" href="./img/icon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="./img/tortita.png" type="image/x-icon">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css"
         integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+
     <link rel="stylesheet" href="./estilos/style.css">
     <title>Inicio | Tu Lista de Mercado</title>
 </head>
@@ -16,13 +16,12 @@
 <body class="container_todo">
     <div class="container_contenido">
         <header>
-            <nav>
-                <ul>
-                    <li><a href="./shoplist.html">Shop List</a></li>
-                    <li><a href="./recipes.html">Recipes</a></li>
-                    <li><a href="./hello.html">Home</a></li>
-                    <li><a href="./join.html">Back</a></li>
-                </ul>
+            <ul>
+                <li><a href="./shoplist.html">Lista</a></li>
+                <li><a href="./recipes.html">Recetas</a></li>
+                <li><a href="./hello.html">Inicio</a></li>
+                <li><a href="./join.html">Atrás</a></li>
+            </ul>
             </nav>
         </header>
         <main>
@@ -32,7 +31,7 @@
         </main>
 
         <!-- jsDelivr :: Libreria :: Boostrap-->
-        <script src="https://kit.fontawesome.com/60d96370ad.js" crossorigin="anonymous"></script>
+        <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
         <script src="https://cdn.jsdelivr.net/npm/sortablejs@latest/Sortable.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/js/bootstrap.min.js"
             integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous">
